...
            if let address = addressTextField.text, address.characters.count > 0 {
                
                
                let item = ToDoItem(title: titleString,
                                    description: descriptionString,
                                    timestamp: date?.timeIntervalSince1970,
                                    location: Location(name: "Office", coordinate:CLLocationCoordinate2DMake(37.3316851,
                                                                                                             -122.0300674)))
                self.itemManager?.addItem(item)
                
//                geocoder.geocodeAddressString(address) {
//                    [unowned self] (placeMarks, error) -> Void in
//
...
